google rich text & Css Overflow fixes

--- a/gallery/assets/gallery.css
+++ b/gallery/assets/gallery.css
@@ -30,8 +30,8 @@ html,body
 {
     background-color: black;
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -43,8 +43,8 @@ html,body
 .marquee_masory_gallery_layout
 {
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     align-items: center;
     justify-content: center;
     overflow: hidden;
