--- a/index/assets/index.css
+++ b/index/assets/index.css
@@ -8,8 +8,8 @@ box-sizing: border-box;
 html,
 body 
 {
-width: 100vw;
-height: 100vh;
+width: 100%;
+height: 100%;
 background-color: black;
 overflow: hidden;
 font-family: "Sora", sans-serif;
