--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -43,7 +43,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
+        width: 100%;
         padding: 2em;
         display: flex;
         justify-content: center;
