--- a/terms/assets/terms.css
+++ b/terms/assets/terms.css
@@ -5,8 +5,8 @@ box-sizing: border-box;
 }
 
 html,body {
-width: 100vw;
-height: 100vh;
+width: 100%;
+height: 100%;
 overflow-x: hidden;
 background-color: black;
 font-family: "Sora", sans-serif;
@@ -31,7 +31,7 @@ display: none; /* hide scrollbar for Chrome, Safari, and Opera */
 
 
 .Terms {
-  width: 100vw;
+  width: 100%;
   height: auto;
   color: white;
   text-align: center;
